outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_01-06-18/evaluations/problem_eval3282236759667059518_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance later. Selection pressure starts at 0.5 and increases to 0.9, with a more aggressive balance between early and late-stage priorities.}
                                                                                                                                                    ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance later. Selection pressure starts at 0.5 and increases to 0.9, with a more aggressive balance between early and late-stage priorities.}
                                                                                                                                                    ^
SyntaxError: unmatched '}'
